# Clothoids

./: .gitignore  .gitmodules  .gitmodules.orig  MANIFEST.in  Makefile  pyproject.toml  setup.py  setup.rb
.github/workflows/: build_and_deploy.yaml  build_and_publish_binaries.yaml  build_linux.yaml  build_wheels.yaml  run_test_and_publish_binaries.yaml  run_tests.yaml
actions/: build_wheels.yaml
actions_to_implement/: build_linux.yaml  build_macos.yaml  build_windows.yaml
src_py/: Clothoids.i  Clothoids.py  Clothoids_wrap.cpp  README.md  clothoids_interface.hh
src_py/Clothoids.egg-info/: PKG-INFO  SOURCES.txt
