[build-system]
requires = ["setuptools>=59.0", "swig>=4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Clothoids"
version = "0.1.3"
authors = [{name = "Enrico Bertolazzi"}]
description = "G1 and G2 fitting with clothoids, spline of clothoids, circle arc and biarc."
readme = "src_py/README.md"
